fps capture harness and slight perf improvements